--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-chips/dot-category-field-chips.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-chips/dot-category-field-chips.component.html
@@ -6,7 +6,11 @@
         [label]="category.value"
         tooltipPosition="top"
         styleClass="p-chip-sm"
-        (onRemove)="remove.emit(category.key)" />
+        (onRemove)="remove.emit(category.key)">
+        <ng-template pTemplate="removeicon">
+            <i class="pi pi-times"></i>
+        </ng-template>
+    </p-chip>
     } @if ($showAllBtn()) {
     <button
         (click)="toogleShowAll()"
