--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/dot-ema-shell/dot-ema-shell.component.html
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/dot-ema-shell/dot-ema-shell.component.html
@@ -1,23 +1,20 @@
-<ng-container *ngIf="shellProperties$ | async as sp">
-    <ng-container *ngIf="sp.canRead; else error">
-        <router-outlet (activate)="onActivateRoute($event)"></router-outlet>
-        <dot-edit-ema-navigation-bar
-            [items]="sp.items"
-            data-testId="ema-nav-bar"></dot-edit-ema-navigation-bar>
-        <p-toast position="top-center" data-testId="ema-toast"></p-toast>
-        <dot-page-tools-seo
-            [currentPageUrlParams]="sp.seoProperties"
-            #pageTools></dot-page-tools-seo>
-    </ng-container>
+@if(uveStore.shellState(); as shellState) { @if(shellState.canRead){
+<router-outlet (activate)="onActivateRoute($event)"></router-outlet>
+<dot-edit-ema-navigation-bar
+    [items]="shellState.items"
+    (action)="handleItemAction($event)"
+    data-testId="ema-nav-bar"></dot-edit-ema-navigation-bar>
+<p-toast position="top-center" data-testId="ema-toast"></p-toast>
+<dot-page-tools-seo [currentPageUrlParams]="shellState.seoParams" #pageTools></dot-page-tools-seo>
 
-    <ng-template #error>
-        <ng-container [ngSwitch]="sp.error">
-            <dot-info-page *ngSwitchCase="403" [info]="EMA_INFO_PAGES.ACCESS_DENIED" />
-            <dot-info-page *ngSwitchCase="404" [info]="EMA_INFO_PAGES.NOT_FOUND" />
-            <dot-not-license *ngSwitchCase="401" />
-        </ng-container>
-    </ng-template>
+}@else {
+
+<ng-container [ngSwitch]="shellState.error">
+    <dot-info-page *ngSwitchCase="403" [info]="shellState.uvePageInfo.ACCESS_DENIED" />
+    <dot-info-page *ngSwitchCase="404" [info]="shellState.uvePageInfo.NOT_FOUND" />
+    <dot-not-license *ngSwitchCase="401" />
 </ng-container>
+} }
 
 <dot-edit-ema-dialog
     (action)="handleNgEvent($event)"
