feat(edit-content) changes #28493

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-search-list/dot-category-field-search-list.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-search-list/dot-category-field-search-list.component.html
@@ -34,7 +34,7 @@
                 <td>{{ category.value }}</td>
                 <td>
                     <span [pTooltip]="category.path" tooltipPosition="top">
-                        {{ category.path }}
+                        {{ category.path || 'edit.content.category-field.category.root-name' | dm }}
                     </span>
                 </td>
             </tr>
