--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-selected/dot-category-field-selected.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-selected/dot-category-field-selected.component.html
@@ -8,7 +8,7 @@
                     [pTooltip]="category.path"
                     tooltipPosition="top"
                     class="category-list__path-content">
-                    {{ category.path }}
+                    {{ category.path || 'edit.content.category-field.category.root-name' | dm }}
                 </span>
             </div>
         </div>
