--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-chips/dot-category-field-chips.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-chips/dot-category-field-chips.component.html
@@ -1,7 +1,7 @@
-<div class="flex gap-3 align-items-center flex-wrap" data-testId="category-list">
+<div class="flex gap-2 align-items-center flex-wrap" data-testId="category-list">
     @for (category of $categoriesToShow(); track category.key) {
     <p-chip
-        [pTooltip]="category.value"
+        [pTooltip]="category.path || category.value"
         [removable]="true"
         [label]="category.value"
         tooltipPosition="top"
