fix change datatable rows to 40px height

--- a/core-web/apps/dotcms-ui/src/app/portlets/dot-templates/dot-template-list/dot-template-list.component.html
+++ b/core-web/apps/dotcms-ui/src/app/portlets/dot-templates/dot-template-list/dot-template-list.component.html
@@ -74,7 +74,7 @@
         <td [ngStyle]="{ 'text-align': tableColumns[4].textAlign }">
             {{ rowData.modDate | dotRelativeDate }}
         </td>
-        <td style="width: 5%; height: 3.85rem">
+        <td style="width: 5%">
             <dot-action-menu-button
                 *ngIf="!rowData.disableInteraction"
                 [attr.data-testid]="rowData.identifier"
