--- a/dotCMS/src/main/webapp/html/css/dijit-dotcms/dotcms.css
+++ b/dotCMS/src/main/webapp/html/css/dijit-dotcms/dotcms.css
@@ -3153,7 +3153,7 @@
 .dijitTextBox,
 .dijitToggleButton {
   border-radius: 0.375rem;
-  height: 2.5rem;
+  height: 2.125rem;
 }
 
 .dijitButton,
@@ -5186,6 +5186,9 @@
 .dojoxGrid .dojoxGridMasterHeader .dojoxGridHeader .dojoxGridRowTable {
   border-bottom: 1px solid #d1d4db;
 }
+.dojoxGrid .dojoxGridMasterHeader .dojoxGridHeader .dojoxGridRowTable tr, .dojoxGrid .dojoxGridMasterHeader .dojoxGridHeader .dojoxGridRowTable td {
+  font-size: 2.9375rem;
+}
 .dojoxGrid .dojoxGridMasterHeader .dojoxGridHeader .dojoxGridArrowButtonChar {
   float: left;
 }
@@ -5213,7 +5216,8 @@
 .dojoxGrid .dojoxGridRow .dojoxGridRowTable .dojoxGridCell,
 .dojoxGrid .dojoxGridHeader .dojoxGridRowTable .dojoxGridCell {
   font-family: Assistant, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  padding: 10px 0.5rem;
+  padding: 0.1875rem 0.5rem;
+  height: 2.5rem;
 }
 .dojoxGrid .dojoxGridPaginator {
   background-color: #d1d4db;
@@ -6129,7 +6133,7 @@ select[multiple]:hover {
 
 .account-flyout h3 {
   margin: 20px 0 0 0;
-  font-size: 0.75rem;
+  font-size: 0.625rem;
   font-weight: bold;
   padding: 0 15px;
 }
@@ -6256,6 +6260,7 @@ select[multiple]:hover {
 }
 #listing-table tr, .listingTable tr, .dojoxUploaderFileListTable tr {
   transition: background-color 0.1s;
+  height: 2.4375rem !important;
 }
 #listing-table tr .selected, .listingTable tr .selected, .dojoxUploaderFileListTable tr .selected {
   background-color: #e0e9f6;
@@ -6264,16 +6269,17 @@ select[multiple]:hover {
 #listing-table td,
 .listingTable td,
 .dojoxUploaderFileListTable td {
-  padding: 10px 0.5rem;
   border-bottom: 1px solid #f3f3f4;
   vertical-align: middle;
+  height: 2.5rem !important;
+  padding: 8px 0.5rem !important;
 }
 #listing-table th .listingThumbDiv, .listingTable th .listingThumbDiv, .dojoxUploaderFileListTable th .listingThumbDiv,
 #listing-table td .listingThumbDiv,
 .listingTable td .listingThumbDiv,
 .dojoxUploaderFileListTable td .listingThumbDiv {
-  height: 60px;
-  width: 80px;
+  height: 2.9375rem !important;
+  width: 4.5rem;
   position: relative;
   border-radius: 0.25rem;
   overflow: hidden;
@@ -6636,7 +6642,7 @@ tr.active {
 
 .suggestHeading {
   padding: 7px 10px;
-  font-size: 0.75rem;
+  font-size: 0.625rem;
   font-weight: bold;
   color: #555;
   background: url("/html/images/skin/skin-sprite.png") repeat-x scroll 0 -325px transparent;
@@ -7748,7 +7754,7 @@ div#_dotHelpMenu {
   -moz-osx-font-smoothing: grayscale;
   content: "\f054";
   color: #afb3c0;
-  font-size: 9px;
+  font-size: 0.625rem;
   position: absolute;
   right: 5px;
   top: 5px;
@@ -8800,7 +8806,7 @@ Styles for commons fields along the backend
   border-radius: 0.125rem;
   border: solid 1.5px #d1d4db;
   display: inline-block;
-  font-size: 0.75rem;
+  font-size: 0.625rem;
   margin: 2px 5px 2px 0px;
   padding: 0.25rem 0.5rem 0.25rem 0.25rem;
   position: relative;
@@ -9705,7 +9711,7 @@ a.category_higlighted, a.tag_higlighted {
   text-overflow: clip;
   white-space: nowrap;
   font-family: Monaco, Menlo, sans-serif;
-  font-size: 0.75rem;
+  font-size: 0.625rem;
 }
 
 .aceTextTemplate,
@@ -9722,7 +9728,7 @@ a.category_higlighted, a.tag_higlighted {
   text-overflow: clip;
   white-space: nowrap;
   font-family: Monaco, Menlo, sans-serif;
-  font-size: 0.75rem;
+  font-size: 0.625rem;
 }
 
 .content-edit__main {
@@ -10560,7 +10566,7 @@ a.category_higlighted, a.tag_higlighted {
   justify-content: center;
 }
 .file-selector-tree__card div[class$=Icon] {
-  font-size: 72px;
+  font-size: 4.5rem;
   height: 72px;
   line-height: 1;
   width: 72px;
@@ -10571,7 +10577,7 @@ a.category_higlighted, a.tag_higlighted {
   position: absolute;
 }
 .file-selector-tree__card .label {
-  font-size: 1rem;
+  font-size: 0.875rem;
   padding: 1.5rem 1rem;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -11198,6 +11204,10 @@ html {
 body {
   margin: 0;
   padding: 0;
+}
+
+span, label, div, dl, dt, dd, ul, ol, li, pre, code, form, fieldset, legend, input, button, textarea, p, blockquote, th, td {
+  font-size: 0.875rem;
 }
 
 .material-icons {
